--- a/index.html
+++ b/index.html
@@ -1,18 +1,159 @@
-<!DOCTYPE html>
-<html lang="pt_br">
+<!doctype html>
+<html>
+  <!-- hello -->
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>xip.io: wildcard DNS for everyone</title>
+    <link rel="stylesheet" href="xip.css">
+    <meta name="viewport" content="width=768">
+      <style>
+html {
+  background: #111;
+}
 
-    <title>SysAdmin QCODA</title>
+body {
+  color: #090;
+  width: 1024px;
+  margin: auto;
 
+  font-family: Courier New, Courier, monospace;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 16px;
+
+  -webkit-font-smoothing: antialiased;
+}
+
+
+
+header {
+  color: #0f0;
+}
+
+a {
+  color: #090;
+}
+
+a:hover {
+  background: #0f0;
+  color: #111;
+  text-decoration: none;
+}
+
+header span.dim {
+  color: #090;
+}
+
+section strong {
+  color: #0f0;
+}
+
+section.copyright {
+  color: #050;
+}
+
+div.cursor {
+  display: inline-block;
+  background: #111;
+  margin-left: 1px;
+
+  -webkit-animation: blink 2s linear 0s infinite;
+  -moz-animation: blink 2s linear 0s infinite;
+  -ms-animation: blink 2s linear 0s infinite;
+  -o-animation: blink 2s linear 0s infinite;
+}
+
+@-webkit-keyframes blink {
+  0%   { background: #0a0 }
+  47%  { background: #090 }
+  50%  { background: #000 }
+  97%  { background: #000 }
+  100% { background: #090 }
+}
+
+@-moz-keyframes blink {
+  0%   { background: #0a0 }
+  47%  { background: #090 }
+  50%  { background: #000 }
+  97%  { background: #000 }
+  100% { background: #090 }
+}
+
+@-ms-keyframes blink {
+  0%   { background: #0a0 }
+  47%  { background: #090 }
+  50%  { background: #000 }
+  97%  { background: #000 }
+  100% { background: #090 }
+}
+
+@-o-keyframes blink {
+  0%   { background: #0a0 }
+  47%  { background: #090 }
+  50%  { background: #000 }
+  97%  { background: #000 }
+  100% { background: #090 }
+}
+
+
+      </style>
   </head>
-
   <body>
-    Olá mundão!!!! Estamos ai, firmão.
-    <br> Aqui é a área do SysAdmin QCODA - isto mesmo, sysadmin que programa infraestrutura como código IaC.
-    <br> Tá, tudo bem, também estamos colocando nossos dedos na infraestrutura imutável - obviamente, pois ela também tem uns brilhos e glitter de IaC.
-    
+    <header><pre>
+
+        ____               _       _           _                             _
+       / ___| _   _ ___   / \   __| |_ __ ___ (_)_ __     __ _  ___ ___   __| | __ _
+       \___ \| | | / __| / _ \ / _` | '_ ` _ \| | '_ \   / _` |/ __/ _ \ / _` |/ _` |
+        ___) | |_| \__ \/ ___ \ (_| | | | | | | | | | | | (_| | (_| (_) | (_| | (_| |
+       |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|
+              |___/                                         |_|
+
+
+        <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span><div class="cursor"> </div>
+
+    </pre></header>
+
+    <section><pre>
+<strong>O QUE FAZEMOS?</strong>
+IREI DESCRVER AQUI
+
+
+<strong>NOSSO TIME CORE</strong>
+IREI DESCRVER AQUI
+
+          <strong>Guto Carvalho</strong>redes sociais...
+          <strong>Dirceu Silva </strong>Redes Sociais...
+          <strong>Rodrigo Pelanza </strong>Redes Sociais..
+          <strong>10.0.0.1</strong>.xip.io   resolves to   10.0.0.1
+
+<br>Explicar:
+       <br> 1- a responsabildiade do tim core
+       <br> 2- que quem faz a diferencá fenomenal sao so convidades e ouvintes
+
+    </pre></section>
+
+
+        <section><pre>
+<strong>COMO PARTICIPAR</strong>
+exmplicarei sobre os envios de propostas e temas, para os tipos distintos de programas que teremos, exemplo:
+        <br>Webinar de discussoes técnicas na pratica
+        <br>Webinar de entrevista de keynotes
+        <br> Bate-bola de desafio técnico
+    </pre></section>
+
+
+
+    <section><pre>
+<strong>ONDE ACHAR NOSSO MATERIAL?</strong>
+irei explocar aqui nosso canal, sistema de newsletter, facebook, linkedin e instagram
+    </pre></section>
+
+
+
+
+    <section class="copyright"><pre>
+            &copy; 2019 SysAdmin QCODA, site base
+</pre></section>
+
+
   </body>
 </html>
