Ajuste de titulo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <!-- hello -->
   <head>
-    <title>xip.io: wildcard DNS for everyone</title>
-    <link rel="stylesheet" href="xip.css">
+    <title>SysAdmin QCODA</title>
     <meta name="viewport" content="width=768">
       <style>
 html {
@@ -109,6 +108,7 @@ div.cursor {
 
 
         <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span><div class="cursor"> </div>
+        
 
     </pre></header>
 
