ajustes de texto -colaboradores

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <!-- hello -->
   <head>
-    <title>SysAdmin QCODA</title>
-    <meta name="viewport" content="width=768">
+    <title>xip.io: wildcard DNS for everyone</title>
+    <link rel="stylesheet" href="xip.css">
+
+    <meta name="viewport" content="width=768"><meta charset="utf-8"/>
       <style>
 html {
   background: #111;
@@ -107,10 +109,13 @@ div.cursor {
               |___/                                         |_|
 
 
-        <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span><div class="cursor"> </div>
-        
+        <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span>
+        <span class="dim">Olá mundão!!!! Estamos ai, firmão.</span>
+        <span class="dim">Aqui é a área do SysAdmin QCODA - isto mesmo, sysadmin que programa infraestrutura como código IaC.</span>
+        <span class="dim">TAqui também tem infraestrutura imutável - pois ela também tem uns brilhos e glitter de IaC.</span><div class="cursor"> </div>
 
     </pre></header>
+    <hr>
 
     <section><pre>
 <strong>O QUE FAZEMOS?</strong>
@@ -122,8 +127,9 @@ IREI DESCRVER AQUI
 
           <strong>Guto Carvalho</strong>redes sociais...
           <strong>Dirceu Silva </strong>Redes Sociais...
+          <strong>Ruan(zito) </strong>Redes Sociais..
           <strong>Rodrigo Pelanza </strong>Redes Sociais..
-          <strong>10.0.0.1</strong>.xip.io   resolves to   10.0.0.1
+
 
 <br>Explicar:
        <br> 1- a responsabildiade do tim core
