--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html>
-  <!-- hello -->
   <head>
-    <title>xip.io: wildcard DNS for everyone</title>
-    <link rel="stylesheet" href="xip.css">
-
+    <title>SysAdmin QCODA</title>
     <meta name="viewport" content="width=768"><meta charset="utf-8"/>
       <style>
 html {
@@ -105,16 +102,25 @@ div.cursor {
        / ___| _   _ ___   / \   __| |_ __ ___ (_)_ __     __ _  ___ ___   __| | __ _
        \___ \| | | / __| / _ \ / _` | '_ ` _ \| | '_ \   / _` |/ __/ _ \ / _` |/ _` |
         ___) | |_| \__ \/ ___ \ (_| | | | | | | | | | | | (_| | (_| (_) | (_| | (_| |
-       |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|
+       |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|<div class="cursor"> </div>
               |___/                                         |_|
 
 
         <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span>
         <span class="dim">Olá mundão!!!! Estamos ai, firmão.</span>
-        <span class="dim">Aqui é a área do SysAdmin QCODA - isto mesmo, sysadmin que programa infraestrutura como código IaC.</span>
-        <span class="dim">TAqui também tem infraestrutura imutável - pois ela também tem uns brilhos e glitter de IaC.</span><div class="cursor"> </div>
+        <span class="dim">Aqui é a área do SysAdmin QCODA - isto mesmo:</span>
+             <span class="dim">
+               -> SysAdmin que programa infraestrutura como código (IaC);
+               -> Que adora automações e orquestradores;
+               -> CI/CD para Provisionamento, Bootstrap, Gerenciamnto de Configuração e Garantia de Estado ;
+               -> Aqui também tem infraestrutura imutável - pois ela também tem uns brilhos e glitter de IaC.</span>
+
 
     </pre></header>
+
+     <section><pre>
+         <strong>E não julgue a aparência da nossa fabulosa webpage. Não julgue o site pelo css :)</strong>
+     </pre></section>
     <hr>
 
     <section><pre>
