Ajustes do texto

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
+  <!-- hello -->
   <head>
     <title>SysAdmin QCODA</title>
+
     <meta name="viewport" content="width=768"><meta charset="utf-8"/>
       <style>
 html {
@@ -14,7 +16,7 @@ body {
   margin: auto;
 
   font-family: Courier New, Courier, monospace;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   line-height: 16px;
 
@@ -119,45 +121,72 @@ div.cursor {
     </pre></header>
 
      <section><pre>
-         <strong>E não julgue a aparência da nossa fabulosa webpage. Não julgue o site pelo css :)</strong>
+         <strong>E não julgue a aparência da nossa fabulosa e moderna webpage. Não julgue o site pelo css :)</strong>
      </pre></section>
     <hr>
 
     <section><pre>
 <strong>O QUE FAZEMOS?</strong>
-IREI DESCRVER AQUI
+        Focamos em conversas técnicas e divulgação de vagas.
+        Nosso lance é conectar pessoas e compartilhar conhecimentos.
+        MAS, PRINCIPALMENTE, apoiar uns aos outros tecnicamente (às vezes, até com código mesmo 🤪)
+        Nossa idéia é fortalecer um grupo que se apoie e mantenha um fluxo sadio de informações.
 
-
-<strong>NOSSO TIME CORE</strong>
-IREI DESCRVER AQUI
-
-          <strong>Guto Carvalho</strong>redes sociais...
-          <strong>Dirceu Silva </strong>Redes Sociais...
-          <strong>Ruan(zito) </strong>Redes Sociais..
-          <strong>Rodrigo Pelanza </strong>Redes Sociais..
-
-
-<br>Explicar:
-       <br> 1- a responsabildiade do tim core
-       <br> 2- que quem faz a diferencá fenomenal sao so convidades e ouvintes
-
-    </pre></section>
-
-
+</pre></section>
+  <hr>
         <section><pre>
-<strong>COMO PARTICIPAR</strong>
-exmplicarei sobre os envios de propostas e temas, para os tipos distintos de programas que teremos, exemplo:
-        <br>Webinar de discussoes técnicas na pratica
-        <br>Webinar de entrevista de keynotes
-        <br> Bate-bola de desafio técnico
-    </pre></section>
+<strong>COMO FAZEMOS?</strong>
+         Temos nossos encontros físicos e virtuais.
+         Sempre damos preferênciao aos virtuais, como webminar, laboratorios, treinamentos,
+         Tem dia que também rola cervejada coletiva virtual... epor aí vai.
+</pre></section>
 
-
-
-    <section><pre>
+  <hr>
+<section><pre>
 <strong>ONDE ACHAR NOSSO MATERIAL?</strong>
-irei explocar aqui nosso canal, sistema de newsletter, facebook, linkedin e instagram
+ <strong><a href="https://github.com/SysAdminQCODA"target="_blank">GitHub</a>!!!!!</strong>
+    Sempre que postarmos códigos, projetos ou documentações, manteremos no GitHub
+
+  <strong><a href="https://www.youtube.com/channel/UC1PNyA5JNaA7Bkb813JkP1Q" target="_blank">YouTube</a>!!!!!</strong>
+    <strong>Vai lá e se inscreve no canal!!!</strong> Todos os videos ao vivo deixamos lá.
+
+    E não tem corte não - aqui é sangue no olho - se der errado deu. Vida real!
+    Outra coisa que nao gostamos muito é slides... #slideless
+
+    Ainda não temos demais canais em redes sociais, mas logo criaremos e iremos atualizaara aqui.
+    Fica na dívida: sistema de newsletter, facebook, linkedin, twitter e instagram
     </pre></section>
+
+  <hr>
+ <section><pre>
+<strong>COMO você pode PARTICIPAR ??????</strong>
+     ASSINE nossa NEWSLETTER!!!
+     Sempre fazemos webinar e você pode se cadastrar
+     para receber nossos convites (para discussões, reuniões, cursos, etc...).
+
+     Nossos principais tipos são:
+        TIPO1 - Webinar de discussoes técnicas na pratica
+        TIPO2 - Webinar com entrevistas com pessoas ícones na comunidade de TI
+        TIPO3 - Bate-bola de desafio técnico ->
+                 É bem simples, primeiro esxiste um voluntário,
+                 depois, sem ele saber, escolhemos um incidente em um cenário simulado.
+                 Botamos ele no fogo e deixamos o pessoal
+                 dar a "pressão do ambiente produtivo crítico".
+
+</pre></section>
+  <hr>
+    <section><pre>
+<strong>NOSSO TIME CORE</strong>
+          <strong>Guto Carvalho</strong>
+          <strong>Dirceu Silva </strong>
+          <strong>Ruan(zito) </strong>
+          <strong>Rodrigo Pelanza </strong>
+          e crescendo...
+
+
+
+    </pre></section>
+
 
 
 
