Ajuste da pesquisa

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ div.cursor {
   <hr>
  <section><pre>
 <strong>COMO você pode PARTICIPAR ??????</strong>
-     ASSINE nossa NEWSLETTER!!!
+     <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCREVA-SE AQUI </a> que deixaremos você sempre informado dos eventos.
      Sempre fazemos webinar e você pode se cadastrar
      para receber nossos convites (para discussões, reuniões, cursos, etc...).
 
