--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ div.cursor {
        |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|<div class="cursor"> </div>
               |___/                                         |_|
 
+              <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCREVA-SE AQUI </a>
+
 
         <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span>
         <span class="dim">Olá mundão!!!! Estamos ai, firmão.</span>
@@ -137,7 +139,7 @@ div.cursor {
         <section><pre>
 <strong>COMO FAZEMOS?</strong>
          Temos nossos encontros físicos e virtuais.
-         Sempre damos preferênciao aos virtuais, como webminar, laboratorios, treinamentos,
+         Sempre damos preferênciao aos virtuais, como webinar, laboratorios, treinamentos,
          Tem dia que também rola cervejada coletiva virtual... epor aí vai.
 </pre></section>
 
