--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ div.cursor {
              <span class="dim">
                -> SysAdmin que programa infraestrutura como código (IaC);
                -> Que adora automações e orquestradores;
-               -> CI/CD para Provisionamento, Bootstrap, Gerenciamnto de Configuração e Garantia de Estado ;
+               -> CI/CD para Provisionamento, Bootstrap, Gerenciamento de Configuração e Garantia de Estado ;
                -> Aqui também tem infraestrutura imutável - pois ela também tem uns brilhos e glitter de IaC.</span>
 
 
@@ -131,7 +131,7 @@ div.cursor {
 <strong>O QUE FAZEMOS?</strong>
         Focamos em conversas técnicas e divulgação de vagas.
         Nosso lance é conectar pessoas e compartilhar conhecimentos.
-        MAS, PRINCIPALMENTE, apoiar uns aos outros tecnicamente (às vezes, até com código mesmo 🤪)
+        PRINCIPALMENTE, apoiar uns aos outros tecnicamente (às vezes, até com código mesmo 🤪)
         Nossa idéia é fortalecer um grupo que se apoie e mantenha um fluxo sadio de informações.
 
 </pre></section>
@@ -139,8 +139,8 @@ div.cursor {
         <section><pre>
 <strong>COMO FAZEMOS?</strong>
          Temos nossos encontros físicos e virtuais.
-         Sempre damos preferênciao aos virtuais, como webinar, laboratorios, treinamentos,
-         Tem dia que também rola cervejada coletiva virtual... epor aí vai.
+         Sempre damos preferênciao aos virtuais, como webinar, laboratórios, treinamentos, etc.
+         Tem dia que também rola cervejada coletiva virtual... e por aí vai.
 </pre></section>
 
   <hr>
