--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@ div.cursor {
        |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|<div class="cursor"> </div>
               |___/                                         |_|
 
-              <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCREVA-SE AQUI </a>
+       <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCRIÇÕES</a> | <a href="https://github.com/SysAdminQCODA"target="_blank">GitHub</a>  | <a href="https://www.youtube.com/channel/UC1PNyA5JNaA7Bkb813JkP1Q" target="_blank">YouTube</a>
 
-
+<hr>
         <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span>
         <span class="dim">Olá mundão!!!! Estamos ai, firmão.</span>
         <span class="dim">Aqui é a área do SysAdmin QCODA - isto mesmo:</span>
              <span class="dim">
                -> SysAdmin que programa infraestrutura como código (IaC);
                -> Que adora automações e orquestradores;
-               -> CI/CD para Provisionamento, Bootstrap, Gerenciamento de Configuração e Garantia de Estado ;
+               -> CI/CD para Provisionamento, Bootstrap, Gerenciamnto de Configuração e Garantia de Estado ;
                -> Aqui também tem infraestrutura imutável - pois ela também tem uns brilhos e glitter de IaC.</span>
 
 
@@ -131,7 +131,7 @@ div.cursor {
 <strong>O QUE FAZEMOS?</strong>
         Focamos em conversas técnicas e divulgação de vagas.
         Nosso lance é conectar pessoas e compartilhar conhecimentos.
-        PRINCIPALMENTE, apoiar uns aos outros tecnicamente (às vezes, até com código mesmo 🤪)
+        MAS, PRINCIPALMENTE, apoiar uns aos outros tecnicamente (às vezes, até com código mesmo 🤪)
         Nossa idéia é fortalecer um grupo que se apoie e mantenha um fluxo sadio de informações.
 
 </pre></section>
@@ -139,8 +139,8 @@ div.cursor {
         <section><pre>
 <strong>COMO FAZEMOS?</strong>
          Temos nossos encontros físicos e virtuais.
-         Sempre damos preferênciao aos virtuais, como webinar, laboratórios, treinamentos, etc.
-         Tem dia que também rola cervejada coletiva virtual... e por aí vai.
+         Sempre damos preferênciao aos virtuais, como webinar, laboratorios, treinamentos,
+         Tem dia que também rola cervejada coletiva virtual... epor aí vai.
 </pre></section>
 
   <hr>
