Melhoria no texto

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ div.cursor {
   <hr>
         <section><pre>
 <strong>COMO FAZEMOS?</strong>
-         Temos nossos encontros físicos e virtuais.
-         Sempre damos preferênciao aos virtuais, como webinar, laboratorios, treinamentos,
-         Tem dia que também rola cervejada coletiva virtual... epor aí vai.
+         Usamos plataformas de Webinar pra fechar a comunicação e fazemos o retransmissão no youtube.
+         Sempre damos preferênciao aos virtuais, como webinar, laboratorios, treinamentos.
+         Tem dia que também rola cervejada coletiva virtual... e por aí vai.
 </pre></section>
 
   <hr>
@@ -152,8 +152,8 @@ div.cursor {
   <strong><a href="https://www.youtube.com/channel/UC1PNyA5JNaA7Bkb813JkP1Q" target="_blank">YouTube</a>!!!!!</strong>
     <strong>Vai lá e se inscreve no canal!!!</strong> Todos os videos ao vivo deixamos lá.
 
-    E não tem corte não - aqui é sangue no olho - se der errado deu. Vida real!
-    Outra coisa que nao gostamos muito é slides... #slideless
+    E não tem corte de vídeo não - aqui é sangue no olho - se der errado deu. Vida real!
+    Outra coisa que nao gostamos muito é slides... #slideless 
 
     Ainda não temos demais canais em redes sociais, mas logo criaremos e iremos atualizaara aqui.
     Fica na dívida: sistema de newsletter, facebook, linkedin, twitter e instagram
@@ -163,8 +163,7 @@ div.cursor {
  <section><pre>
 <strong>COMO você pode PARTICIPAR ??????</strong>
      <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCREVA-SE AQUI </a> que deixaremos você sempre informado dos eventos.
-     Sempre fazemos webinar e você pode se cadastrar
-     para receber nossos convites (para discussões, reuniões, cursos, etc...).
+     (Discussões técnicas, apresentações, cursos, a cerveja online da sexta...).
 
      Nossos principais tipos são:
         TIPO1 - Webinar de discussoes técnicas na pratica
