--- a/index.html
+++ b/index.html
@@ -9,59 +9,45 @@
 html {
   background: #111;
 }
-
 body {
   color: #090;
   width: 1024px;
   margin: auto;
-
   font-family: Courier New, Courier, monospace;
   font-size: 16px;
   font-weight: bold;
   line-height: 16px;
-
   -webkit-font-smoothing: antialiased;
 }
-
-
-
 header {
   color: #0f0;
 }
-
 a {
   color: #090;
 }
-
 a:hover {
   background: #0f0;
   color: #111;
   text-decoration: none;
 }
-
 header span.dim {
   color: #090;
 }
-
 section strong {
   color: #0f0;
 }
-
 section.copyright {
   color: #050;
 }
-
 div.cursor {
   display: inline-block;
   background: #111;
   margin-left: 1px;
-
   -webkit-animation: blink 2s linear 0s infinite;
   -moz-animation: blink 2s linear 0s infinite;
   -ms-animation: blink 2s linear 0s infinite;
   -o-animation: blink 2s linear 0s infinite;
 }
-
 @-webkit-keyframes blink {
   0%   { background: #0a0 }
   47%  { background: #090 }
@@ -69,7 +55,6 @@ div.cursor {
   97%  { background: #000 }
   100% { background: #090 }
 }
-
 @-moz-keyframes blink {
   0%   { background: #0a0 }
   47%  { background: #090 }
@@ -77,7 +62,6 @@ div.cursor {
   97%  { background: #000 }
   100% { background: #090 }
 }
-
 @-ms-keyframes blink {
   0%   { background: #0a0 }
   47%  { background: #090 }
@@ -85,7 +69,6 @@ div.cursor {
   97%  { background: #000 }
   100% { background: #090 }
 }
-
 @-o-keyframes blink {
   0%   { background: #0a0 }
   47%  { background: #090 }
@@ -93,8 +76,6 @@ div.cursor {
   97%  { background: #000 }
   100% { background: #090 }
 }
-
-
       </style>
   </head>
   <body>
@@ -124,6 +105,8 @@ div.cursor {
 
      <section><pre>
          <strong>E não julgue a aparência da nossa fabulosa e moderna webpage. Não julgue o site pelo css :)</strong>
+         </span>Foi criado dia 26/07/2017, idealizado por um grupo de analistas que tinham como objetivo se ajudarem, </span>
+         </span>repassar novidades aprendidas, expor dificuldades vividas - e, ouvir quando necessário.</span>
      </pre></section>
     <hr>
 
@@ -153,7 +136,7 @@ div.cursor {
     <strong>Vai lá e se inscreve no canal!!!</strong> Todos os videos ao vivo deixamos lá.
 
     E não tem corte de vídeo não - aqui é sangue no olho - se der errado deu. Vida real!
-    Outra coisa que nao gostamos muito é slides... #slideless 
+    Outra coisa que nao gostamos muito é slides... #slideless
 
     Ainda não temos demais canais em redes sociais, mas logo criaremos e iremos atualizaara aqui.
     Fica na dívida: sistema de newsletter, facebook, linkedin, twitter e instagram
