--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ div.cursor {
        |____/ \__, |___/_/   \_\__,_|_| |_| |_|_|_| |_|  \__, |\___\___/ \__,_|\__,_|<div class="cursor"> </div>
               |___/                                         |_|
 
-       <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCRIÇÕES</a> | <a href="https://github.com/SysAdminQCODA"target="_blank">GitHub</a>  | <a href="https://www.youtube.com/channel/UC1PNyA5JNaA7Bkb813JkP1Q" target="_blank">YouTube</a>
+       <a href="https://forms.gle/rUDntCa1dgQPwnut7" target="_blank">INSCRIÇÕES</a> | <a href="https://github.com/SysAdminQCODA"target="_blank">GitHub</a>  | <a href="https://www.youtube.com/channel/UC1PNyA5JNaA7Bkb813JkP1Q" target="_blank">YouTube</a> | <a href="fb.me/SysAdminQCODA" target="_blank">Facebook</a>
 
 <hr>
         <span class="dim">COMPARTILHAMENTO DE CONHECIMENTO, DE VERDADE E SEM FRESCURA!</span>
@@ -138,8 +138,6 @@ div.cursor {
     E não tem corte de vídeo não - aqui é sangue no olho - se der errado deu. Vida real!
     Outra coisa que nao gostamos muito é slides... #slideless
 
-    Ainda não temos demais canais em redes sociais, mas logo criaremos e iremos atualizaara aqui.
-    Fica na dívida: sistema de newsletter, facebook, linkedin, twitter e instagram
     </pre></section>
 
   <hr>
